# odia_eval

./: .gitignore  LICENSE  README.md  RESULTS.md  __init__.py  _quick_eval.py  analysis.py  datasets.py  eval.py  io.py  prompts.py  pyproject.toml  requirements.txt  scorers.py
notebooks/: README.md  capability.ipynb  eval_odiabench.ipynb  eval_odiabench_working.ipynb
